Bug 1034376 - Avoid APZC being stuck in overscrolled state when CancelAnimation() is called during panning. r=kats

--HG--
extra : rebase_source : bbc3a02d6be7081be77b58cb2795aa57ce794002